[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Phil Hord <phil.hord@gmail.com>"]
edition = "2021"
repository = "https://github.com/phord/AdventOfCode2022"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaah = "0.2.1"
clap = { version = "4.0", features = ["derive"] }
num = "0.4"

criterion = "0.4"
itertools = "*"

[[bench]]
name = "aoc-bench"
harness = false
